task4-kubernetes-rke-cluster/rke-cluster/manifests/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: rke-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-my-nginx-chart
            port:
              number: 80
